src/Test/Fixtures/Good/Types/noSpacesQubitArrayTypeDeclaration.lf
let qubits:[qubit;2]=qalloc(2);