src/Test/Fixtures/Bad/BitQubit/unexpectedSecondMeasrInBitArrayDeclaration.lf
let bs : [bit; 8] = measr(qs) measr(qs);